[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/menus/subMenus/HotkeyMenu.gd" type="Script" id=1]
[ext_resource path="res://source/menus/subMenus/elements/HotkeyButton.tscn" type="PackedScene" id=2]

[node name="HotkeyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLabels" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 91.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/ActionLabels"]
margin_right = 91.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 50 )
text = "Move right"
valign = 1

[node name="Label2" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 54.0
margin_right = 91.0
margin_bottom = 104.0
rect_min_size = Vector2( 80, 50 )
text = "Move left"
valign = 1

[node name="Label3" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 108.0
margin_right = 91.0
margin_bottom = 158.0
rect_min_size = Vector2( 80, 50 )
text = "Climb up"
valign = 1

[node name="Label4" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 162.0
margin_right = 91.0
margin_bottom = 212.0
rect_min_size = Vector2( 80, 50 )
text = "Climb down"
valign = 1

[node name="Label9" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 216.0
margin_right = 91.0
margin_bottom = 266.0
rect_min_size = Vector2( 80, 50 )
text = "Jump"
valign = 1

[node name="Label6" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 270.0
margin_right = 91.0
margin_bottom = 320.0
rect_min_size = Vector2( 80, 50 )
text = "Release hook"
valign = 1

[node name="Label5" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 324.0
margin_right = 91.0
margin_bottom = 374.0
rect_min_size = Vector2( 80, 50 )
text = "Launch hook"
valign = 1

[node name="Label7" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 378.0
margin_right = 91.0
margin_bottom = 428.0
rect_min_size = Vector2( 80, 50 )
text = "Acend hook"
valign = 1

[node name="Label8" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 432.0
margin_right = 91.0
margin_bottom = 482.0
rect_min_size = Vector2( 80, 50 )
text = "Descend hook"
valign = 1

[node name="Label10" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 486.0
margin_right = 91.0
margin_bottom = 536.0
rect_min_size = Vector2( 80, 50 )
text = "Melee attack"
valign = 1

[node name="Label11" type="Label" parent="HBoxContainer/ActionLabels"]
margin_top = 540.0
margin_right = 91.0
margin_bottom = 590.0
rect_min_size = Vector2( 80, 50 )
text = "Shoot"
valign = 1

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 95.0
margin_right = 215.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotkeyButton" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 50.0
_action = "move_right"

[node name="HotkeyButton2" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 120.0
margin_bottom = 104.0
_action = "move_left"

[node name="HotkeyButton3" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 120.0
margin_bottom = 158.0
_action = "move_up"

[node name="HotkeyButton4" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 120.0
margin_bottom = 212.0
_action = "move_down"

[node name="HotkeyButton9" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 120.0
margin_bottom = 266.0
_action = "jump"

[node name="HotkeyButton6" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 270.0
margin_right = 120.0
margin_bottom = 320.0
_action = "release_hook"

[node name="HotkeyButton5" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 324.0
margin_right = 120.0
margin_bottom = 374.0
_action = "launch_hook"

[node name="HotkeyButton7" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 378.0
margin_right = 120.0
margin_bottom = 428.0
_action = "ascend_hook"

[node name="HotkeyButton8" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 432.0
margin_right = 120.0
margin_bottom = 482.0
_action = "descend_hook"

[node name="HotkeyButton10" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 486.0
margin_right = 120.0
margin_bottom = 536.0
_action = "melee_attack"

[node name="HotkeyButton11" parent="HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 540.0
margin_right = 120.0
margin_bottom = 590.0
_action = "range_attack"

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 195.898
margin_top = 59.6838
margin_right = 776.898
margin_bottom = 397.684
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -7.0
margin_right = 43.5
margin_bottom = 7.0
text = "Click on a key"

[node name="ResetButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 103.0
text = "Reset settings"
